--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ footer{
 #cloud{
     padding-top: 50px;
     padding-bottom: 60px;
-    background-image: url(/img/cloud.png);
+    background-image: url(img/cloud.png);
     width: 100%;
 }
 #field{
