--- a/css/style.css
+++ b/css/style.css
@@ -159,3 +159,66 @@ footer{
     width: 100%;
     margin-top: -50px;
 }
+
+@media (max-width: 768px) {
+    #row-1 {
+        order: 3;
+    }
+    #row-2 {
+        order: 1;
+    }
+}
+
+.nav-margin{
+    margin-top: 12px;
+}
+.main-body{
+    margin-top: 50px;
+    margin-bottom: 150px;
+}
+.page-title{
+    font-size: 36px;
+    color: #DD3333;
+    text-align: center;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+}
+.card{
+    border: 0px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    margin: 10px;
+    padding: 30px;
+}
+.catagory_title{
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+.img-card{
+    margin: 10px;
+    background: #F4F4F4;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
+}
+.img-card img{
+    width: 100%;
+}
+.img-card .img-title{
+    min-height: 60px;
+    margin: 10px;
+    text-align: center;
+}
+.text-card{
+    margin: 10px;
+    padding: 20px;
+    background: #F4F4F4;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
+}
+.text-card p{
+    font-size: 16px;
+    text-align: justify;
+}
+.text-card h1{
+    font-size: 25px;
+    font-weight: bold;
+}
