--- a/css/style.css
+++ b/css/style.css
@@ -44,20 +44,23 @@ nav{
     text-transform: uppercase;
     font-size: 36px;
 }
-.card{
+.cardX{
     border-radius: 10px;
 }
 #card-left{
     background: linear-gradient(197.55deg, #C2035A 6.42%, #DD3333 87.99%);
     border-radius: 10px;
+    height: 100%;
 }
 #card-middle{
     background: linear-gradient(207.52deg, #4C6FA2 2.71%, #10356C 92.28%);
     border-radius: 10px;
+    height: 100%;
 }
 #card-right{
     background: linear-gradient(210.25deg, #C30F5F 6.15%, #FF3382 92.27%);
     border-radius: 10px;
+    height: 100%;
 }
 .card-heading{
     margin-top: 30px;
@@ -110,7 +113,8 @@ nav{
     padding: 10px;
     margin-top: 5px;
     margin-bottom: 5px;
-}.booking-form textarea{
+}
+.booking-form textarea{
     width: 100% !important;
     border-width: 1px;
     border-radius: 0px;
