--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,13 @@ footer{
     margin-bottom: 50px;
     text-transform: uppercase;
 }
+.page-title-black{
+    font-size: 36px;
+    color: black;
+    text-align: center;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+}
 .card{
     border: 0px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
@@ -269,7 +276,16 @@ a{
         margin-bottom: 50px;
     }
 }
-
+@media only screen and (max-width: 500px) {
+    #desktop-slider{
+        display: none !important;
+    }
+}
+@media only screen and (min-width: 500px) {
+    #mobile-slider{
+        display: none !important;
+    }
+}
 nav.navbar .navbar-nav .nav-item .btn-group {
     display: block;
     text-align: center;
@@ -281,4 +297,7 @@ nav.navbar .navbar-nav .nav-item .btn-group a {
 
 nav.navbar .navbar-nav .nav-item .btn-group a:hover {
     color: var(--bs-nav-link-hover-color);
+}
+.text-card{
+    text-align: justify;
 }
