--- a/css/style.css
+++ b/css/style.css
@@ -47,10 +47,23 @@ nav{
     border-radius: 10px;
     height: 100%;
 }
+#card-left-img{
+    position:absolute;
+    left: -65px;
+    bottom: -65px;
+    z-index: 1;
+}
+#card-right-img{
+    position:absolute;
+    right: -65px;
+    bottom: -65px;
+    z-index: 1;
+}
 #card-right{
     background: linear-gradient(210.25deg, #C30F5F 6.15%, #FF3382 92.27%);
     border-radius: 10px;
     height: 100%;
+    min-height: 450px;
 }
 .card-heading{
     margin-top: 30px;
@@ -257,7 +270,40 @@ a{
 .footer-mid{
     text-align: center;
 }
-@media (max-width: 768px) {
+.footer-image img{
+    width: 120px;
+}
+.about-back-box{
+    background-color: rgba(0, 255, 255, 0.363); 
+    border-radius: 10%;
+    padding: 20px;
+    padding-bottom: 10px;
+}
+.about-front-box{
+    background-color: rgba(23, 23, 65, 0.705); 
+    border-radius: 10%; 
+    text-align: center;  
+    color: white; 
+    font-size: 25px;
+    min-height: 180px; 
+    padding-top: 50px;
+}
+@media (max-width:1400px) {
+    #card-left-img{
+        position:absolute;
+        left: 0;
+        bottom: -65px;
+        z-index: 1;
+    }
+    #card-right-img{
+        position:absolute;
+        right: 0;
+        bottom: -65px;
+        z-index: 1;
+    }
+    
+}
+@media (max-width: 821px) {
     #row-1 {
         order: 3;
     }
