--- a/css/style.css
+++ b/css/style.css
@@ -1,334 +1,349 @@
-body{
-    font-family: 'Poppins', sans-serif;
+body {
+  font-family: 'Poppins', sans-serif;
 }
-nav{
-    background-color: white;
+nav {
+  background-color: white;
 }
-#nav-logo{
-    height: 50px;
+#nav-logo {
+  height: 50px;
 }
-#nav-icon{
-    align-content: center;
-    height: 30px;
-    margin-bottom: 5px;
+#nav-icon {
+  align-content: center;
+  height: 30px;
+  margin-bottom: 5px;
 }
 .center-block {
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
 }
-#nav-logo-text{
-    font-size: 12px;
-    text-transform: uppercase;
-    color: black !important;
-}
-
-#slider{
-    width: 100%;
-}
-.section-heading{
-    color: #DD3333;
-    margin-top: 100px;
-    margin-bottom: 50px;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 36px;
-}
-.cardX{
-    border-radius: 10px;
-}
-#card-left{
-    background: linear-gradient(197.55deg, #C2035A 6.42%, #DD3333 87.99%);
-    border-radius: 10px;
-    height: 100%;
-}
-#card-middle{
-    background: linear-gradient(207.52deg, #4C6FA2 2.71%, #10356C 92.28%);
-    border-radius: 10px;
-    height: 100%;
-}
-#card-left-img{
-    position:absolute;
-    left: -65px;
-    bottom: -65px;
-    z-index: 1;
-}
-#card-right-img{
-    position:absolute;
-    right: -65px;
-    bottom: -65px;
-    z-index: 1;
-}
-#card-right{
-    background: linear-gradient(210.25deg, #C30F5F 6.15%, #FF3382 92.27%);
-    border-radius: 10px;
-    height: 100%;
-    min-height: 450px;
-}
-.card-heading{
-    margin-top: 30px;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 24px;
-}
-.card-text{
-    font-size: 16px;
-    margin-left: 15px;
-    color: white;
-    margin-bottom: 30px;
-}
-.button-custom{
-    height: 40px;
-    width: 150px;
-    border: 0px;
-    border-radius: 0px;
-    font-size: 13px;
-}
-.button-custom-small{
-    height: 30px;
-    width: 100px;
-    border: 0px;
-    border-radius: 0px;
-    font-size: 13px;
-}
-#offer-btn{
-    background: #25579E;
-    color: white;
-    text-transform: uppercase;
-}
-#offer-btn:hover{
-    background: white ;
-    border: 1px solid #25579E;
-    color: #25579E;
-}
-#about-us-img{
-    width: 100%;;
-}
-#about-us-txt{
-    margin: 15px;
-    text-align: justify;
-}
-#about-us-txt p{
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-.booking-form{
-    margin: 15px;
-}
-.booking-form input{
-    width: 100% !important;
-    height: 36px;
-    border-width: 1px;
-    border-radius: 0px;
-    padding: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-.booking-form textarea{
-    width: 100% !important;
-    border-width: 1px;
-    border-radius: 0px;
-    padding: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-.booking-form label{
-    margin-top: 20px;
-    margin-bottom: 10px;
-}
-#form-btn{
-    margin-top: 40px;
-    background: #DD3333;
-    color: white;
-    text-transform: uppercase;
-}
-#form-btn:hover{
-    background: white ;
-    border: 1px solid #DD3333;
-    color: #DD3333;
-
-}
-.contact-head{
-    font-size: 30px;
-    margin-top: 60px;
-}
-.contact-table tr{
-    height: 50px;
-    padding: 10px;
-}
-.contact-div{
-    padding-left: 20px;
-}
-footer{
-    background: linear-gradient(180deg, #9CB53A 0%, #2B6E14 100%);
-    padding-top: 50px;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-top: -10px;
-    color:white;
-    font-size: 15px;
-    padding-bottom: 50px;
-}
-.footer-heading{
-    font-size: 20px !important;
-}
-.footer-logo{
-    margin-bottom: 50px;
-}
-#cloud{
-    padding-top: 50px;
-    padding-bottom: 60px;
-    width: 100%;
-}
-#field{
-    width: 100%;
-    margin-top: -50px;
+#nav-logo-text {
+  font-size: 12px;
+  text-transform: uppercase;
+  color: black !important;
 }
 
-.footer-right a{
-    color: white;
+#slider {
+  width: 100%;
+}
+.section-heading {
+  color: #dd3333;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 36px;
+}
+.cardX {
+  border-radius: 10px;
+}
+#card-left {
+  background: linear-gradient(197.55deg, #c2035a 6.42%, #dd3333 87.99%);
+  border-radius: 10px;
+  height: 100%;
+}
+#card-middle {
+  background: linear-gradient(207.52deg, #4c6fa2 2.71%, #10356c 92.28%);
+  border-radius: 10px;
+  height: 100%;
+}
+#card-left-img {
+  position: absolute;
+  left: -65px;
+  bottom: -65px;
+  z-index: 1;
+}
+#card-right-img {
+  position: absolute;
+  right: -65px;
+  bottom: -65px;
+  z-index: 1;
+}
+#card-right {
+  background: linear-gradient(210.25deg, #c30f5f 6.15%, #ff3382 92.27%);
+  border-radius: 10px;
+  height: 100%;
+  min-height: 450px;
+}
+.card-heading {
+  margin-top: 30px;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 24px;
+}
+.card-text {
+  font-size: 16px;
+  margin-left: 15px;
+  color: white;
+  margin-bottom: 30px;
+}
+.button-custom {
+  height: 40px;
+  width: 150px;
+  border: 0px;
+  border-radius: 0px;
+  font-size: 13px;
+}
+.button-custom-small {
+  height: 30px;
+  width: 100px;
+  border: 0px;
+  border-radius: 0px;
+  font-size: 13px;
+}
+#offer-btn {
+  background: #25579e;
+  color: white;
+  text-transform: uppercase;
+}
+#offer-btn:hover {
+  background: white;
+  border: 1px solid #25579e;
+  color: #25579e;
+}
+#about-us-img {
+  width: 100%;
+}
+#about-us-txt {
+  margin: 15px;
+  text-align: justify;
+}
+#about-us-txt p {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+.booking-form {
+  margin: 15px;
+}
+.booking-form input {
+  width: 100% !important;
+  height: 36px;
+  border-width: 1px;
+  border-radius: 0px;
+  padding: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.booking-form textarea {
+  width: 100% !important;
+  border-width: 1px;
+  border-radius: 0px;
+  padding: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.booking-form label {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+#form-btn {
+  margin-top: 40px;
+  background: #dd3333;
+  color: white;
+  text-transform: uppercase;
+}
+#form-btn:hover {
+  background: white;
+  border: 1px solid #dd3333;
+  color: #dd3333;
+}
+.contact-head {
+  font-size: 30px;
+  margin-top: 60px;
+}
+.contact-table tr {
+  height: 50px;
+  padding: 10px;
+}
+.contact-div {
+  padding-left: 20px;
+}
+footer {
+  background: linear-gradient(180deg, #9cb53a 0%, #2b6e14 100%);
+  padding-top: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-top: -10px;
+  color: white;
+  font-size: 15px;
+  padding-bottom: 50px;
+}
+.footer-heading {
+  font-size: 20px !important;
+}
+.footer-logo {
+  margin-bottom: 50px;
+}
+#cloud {
+  padding-top: 50px;
+  padding-bottom: 60px;
+  width: 100%;
+}
+#field {
+  width: 100%;
+  margin-top: -50px;
 }
 
-.nav-margin{
-    margin-top: 12px;
-}
-.main-body{
-    margin-top: 50px;
-    margin-bottom: 150px;
-}
-.page-title{
-    font-size: 36px;
-    color: white;
-    text-align: center;
-    margin-bottom: 50px;
-    text-transform: uppercase;
-}
-.page-title-black{
-    font-size: 36px;
-    color: black;
-    text-align: center;
-    margin-bottom: 50px;
-    text-transform: uppercase;
-}
-.card{
-    border: 0px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
-    margin: 10px;
-    padding: 30px;
-}
-.catagory_title{
-    font-size: 20px;
-    margin-top: 10px;
-    margin-bottom: 15px;
-}
-.img-card{
-    margin: 10px;
-    background: #F4F4F4;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
-}
-.img-card img{
-    width: 100%;
-}
-.img-card .img-title{
-    min-height: 60px;
-    margin: 10px;
-    text-align: center;
-}
-.text-card{
-    margin: 10px;
-    padding: 20px;
-    background: #F4F4F4;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
-}
-.text-card p{
-    font-size: 16px;
-    text-align: justify;
-}
-.text-card h1{
-    font-size: 25px;
-    font-weight: bold;
+.footer-right a {
+  color: white;
 }
 
-.page-title-background{
-    height: 200px;
+.nav-margin {
+  margin-top: 12px;
+}
+.main-body {
+  margin-top: 50px;
+  margin-bottom: 150px;
+}
+.page-title {
+  font-size: 36px;
+  color: white;
+  text-align: center;
+  margin-bottom: 50px;
+  text-transform: uppercase;
+}
+.page-title-black {
+  font-size: 36px;
+  color: black;
+  text-align: center;
+  margin-bottom: 50px;
+  text-transform: uppercase;
+}
+.card {
+  border: 0px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  margin: 10px;
+  padding: 30px;
+}
+.catagory_title {
+  font-size: 20px;
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+.img-card {
+  margin: 10px;
+  background: #f4f4f4;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
+}
+.img-card img {
+  width: 100%;
+}
+.img-card .img-title {
+  min-height: 60px;
+  margin: 10px;
+  text-align: center;
+}
+.text-card {
+  margin: 10px;
+  padding: 20px;
+  background: #f4f4f4;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
+}
+.text-card p {
+  font-size: 16px;
+  text-align: justify;
+}
+.text-card h1 {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.page-title-background {
+  height: 200px;
 }
 
 .nav-item .active {
-    color: #DD3333 !important;
+  color: #dd3333 !important;
 }
-a{
-    text-decoration: none;
-    color: black;
+a {
+  text-decoration: none;
+  color: black;
 }
-.btn:hover{
-    border-color: white !important;
+.btn:hover {
+  border-color: white !important;
 }
-.footer-right{
-    text-align: end;
+.footer-right {
+  text-align: end;
 }
-.footer-mid{
-    text-align: center;
+.footer-mid {
+  text-align: center;
 }
-.footer-image img{
-    width: 120px;
+.footer-image img {
+  width: 120px;
 }
-@media (max-width:1400px) {
-    #card-left-img{
-        position:absolute;
-        left: 0;
-        bottom: -65px;
-        z-index: 1;
-    }
-    #card-right-img{
-        position:absolute;
-        right: 0;
-        bottom: -65px;
-        z-index: 1;
-    }
-    
+@media (max-width: 1400px) {
+  #card-left-img {
+    position: absolute;
+    left: 0;
+    bottom: -65px;
+    z-index: 1;
+  }
+  #card-right-img {
+    position: absolute;
+    right: 0;
+    bottom: -65px;
+    z-index: 1;
+  }
 }
 @media (max-width: 821px) {
-    #row-1 {
-        order: 3;
-    }
-    #row-2 {
-        order: 1;
-    }
-    .footer-left{
-        margin-bottom: 50px;
-    }
-    .footer-right{
-        text-align: start;
-        margin-bottom: 50px;
-    }
-    .footer-mid{
-        text-align: start;
-        margin-bottom: 50px;
-    }
+  #row-1 {
+    order: 3;
+  }
+  #row-2 {
+    order: 1;
+  }
+  .footer-left {
+    margin-bottom: 50px;
+  }
+  .footer-right {
+    text-align: start;
+    margin-bottom: 50px;
+  }
+  .footer-mid {
+    text-align: start;
+    margin-bottom: 50px;
+  }
 }
 @media only screen and (max-width: 500px) {
-    #desktop-slider{
-        display: none !important;
-    }
+  #desktop-slider {
+    display: none !important;
+  }
 }
 @media only screen and (min-width: 500px) {
-    #mobile-slider{
-        display: none !important;
-    }
+  #mobile-slider {
+    display: none !important;
+  }
 }
 nav.navbar .navbar-nav .nav-item .btn-group {
-    display: block;
-    text-align: center;
+  display: block;
+  text-align: center;
 }
 
 nav.navbar .navbar-nav .nav-item .btn-group a {
-    color: var(--bs-nav-link-color);
+  color: var(--bs-nav-link-color);
 }
 
 nav.navbar .navbar-nav .nav-item .btn-group a:hover {
-    color: var(--bs-nav-link-hover-color);
+  color: var(--bs-nav-link-hover-color);
 }
-.text-card{
-    text-align: justify;
+.text-card {
+  text-align: justify;
 }
+
+.btn.btn-danger,
+.bg-danger {
+  background-color: #dd3333 !important;
+}
+
+/* #fb-root > .fb_iframe_widget > span > iframe,
+#fb-root > .fb_dialog > .fb_dialog_content > iframe {
+  margin-bottom: 4rem !important;
+} */
+
+/* iframe.fb_customer_chat_bounce_in_v2 {
+    left: 9pt;
+} */
+/* iframe.fb_customer_chat_bounce_out_v2 {
+    left: 9pt;
+} */
